--- a/app/src/main/res/layout/activity_movie_info.xml
+++ b/app/src/main/res/layout/activity_movie_info.xml
@@ -89,27 +89,30 @@
                 android:padding="10dp"
                 android:layout_height="40dp">
 
+
                 <TextView
                     android:id="@+id/movie_info_release_date"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginRight="15dp"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="bold"
-                    android:layout_weight="1"/>
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/movie_rating"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:textStyle="bold"
+                    android:layout_marginRight="15dp"
                     android:textColor="@color/colorPrimaryDark"
-                    android:layout_weight="1"/>
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/movie_duration"
-                    android:layout_width="0dp"
-                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginRight="15dp"
                     android:textColor="@color/colorPrimaryDark"
-                    android:layout_weight="1"/>
+                    android:textStyle="bold" />
 
 
             </LinearLayout>
@@ -119,15 +122,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:textColor="@color/textColor"/>
+                android:maxLines="4"
+                android:textColor="@color/textColor" />
+
             <TextView
                 android:id="@+id/showMore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="Show More"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="18dp"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:textSize="18dp" />
 
         </LinearLayout>
 
@@ -200,27 +205,36 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_marginTop="5dp"
-                    android:layout_height="30dp">
+                    android:layout_height="wrap_content">
 
-                    <ImageView
-                        android:id="@+id/like"
-                        app:srcCompat="@drawable/ic_thumb_up_black_24dp"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"/>
+
 
                     <ImageView
                         android:id="@+id/mylist"
                         app:srcCompat="@drawable/ic_add_black_24dp"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"/>
+
+                    <ImageView
+                        android:id="@+id/like"
+                        app:srcCompat="@drawable/ic_thumb_up_black_24dp"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"/>
 
                     <ImageView
                         android:id="@+id/share"
                         app:srcCompat="@drawable/ic_share_black_24dp"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"/>
+
+                    <ImageView
+                        android:id="@+id/download"
+                        app:srcCompat="@drawable/ic_vertical_align_bottom_black_24dp"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"/>
 
                 </LinearLayout>
@@ -228,15 +242,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="20dp">
-
-                    <TextView
-                        android:text="Like"
-                        android:textAlignment="center"
-                        android:textStyle="bold"
-                        android:textColor="@color/textColor"
-                        android:layout_width="0dp"
-                        android:layout_height="20dp"
-                        android:layout_weight="1"/>
 
                     <TextView
                         android:text="My List"
@@ -248,7 +253,25 @@
                         android:layout_weight="1"/>
 
                     <TextView
+                        android:text="Like"
+                        android:textAlignment="center"
+                        android:textStyle="bold"
+                        android:textColor="@color/textColor"
+                        android:layout_width="0dp"
+                        android:layout_height="20dp"
+                        android:layout_weight="1"/>
+
+                    <TextView
                         android:text="Share"
+                        android:textStyle="bold"
+                        android:textAlignment="center"
+                        android:textColor="@color/textColor"
+                        android:layout_width="0dp"
+                        android:layout_height="20dp"
+                        android:layout_weight="1"/>
+
+                    <TextView
+                        android:text="Download"
                         android:textStyle="bold"
                         android:textAlignment="center"
                         android:textColor="@color/textColor"
