--- a/app/src/main/res/layout/activity_cast_info.xml
+++ b/app/src/main/res/layout/activity_cast_info.xml
@@ -1,12 +1,35 @@
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/colorPrimary">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+    <LinearLayout
+        android:id="@+id/main"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/galleryRecyclerView"
+            />
+    </LinearLayout>
+
+
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,7 +66,7 @@
                         android:layout_margin="2dp"
                         android:textStyle="bold"
                         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                        android:textColor="@color/textColor"/>
+                        android:textColor="@color/green"/>
 
                     <TextView
                         android:id="@+id/cast_info_gender"
@@ -51,24 +74,24 @@
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
                         android:layout_margin="2dp"
-                        android:textColor="@color/green"/>
+                        android:textColor="@color/textColor"/>
                     <TextView
                         android:id="@+id/cast_info_dob"
                         android:textStyle="bold"
                         android:layout_margin="2dp"
-                        android:textColor="@color/green"
+                        android:textColor="@color/textColor"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                     <TextView
                         android:id="@+id/cast_info_pob"
-                        android:textColor="@color/green"
+                        android:textColor="@color/textColor"
                         android:textStyle="bold"
                         android:layout_margin="2dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                     <TextView
                         android:id="@+id/popularity"
-                        android:textColor="@color/green"
+                        android:textColor="@color/textColor"
                         android:textStyle="bold"
                         android:layout_margin="2dp"
                         android:layout_width="match_parent"
@@ -100,50 +123,50 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_marginTop="3dp"
+            android:layout_margin="3dp"
             android:layout_height="60dp">
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_marginTop="5dp"
-                android:layout_height="30dp">
+                android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/like"
-                    app:srcCompat="@drawable/ic_thumb_up_black_24dp"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
+
 
                 <ImageView
                     android:id="@+id/mylist"
                     app:srcCompat="@drawable/ic_add_black_24dp"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:id="@+id/like"
+                    app:srcCompat="@drawable/ic_thumb_up_black_24dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"/>
 
                 <ImageView
                     android:id="@+id/share"
                     app:srcCompat="@drawable/ic_share_black_24dp"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <ImageView
+                    android:id="@+id/download"
+                    app:srcCompat="@drawable/ic_vertical_align_bottom_black_24dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"/>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:text="Like"
-                    android:textAlignment="center"
-                    android:textStyle="bold"
-                    android:textColor="@color/textColor"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"/>
+                android:layout_height="20dp">
 
                 <TextView
                     android:text="My List"
@@ -151,7 +174,16 @@
                     android:textAlignment="center"
                     android:textColor="@color/textColor"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:text="Like"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:textColor="@color/textColor"
+                    android:layout_width="0dp"
+                    android:layout_height="20dp"
                     android:layout_weight="1"/>
 
                 <TextView
@@ -160,12 +192,24 @@
                     android:textAlignment="center"
                     android:textColor="@color/textColor"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:text="Download"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:textColor="@color/textColor"
+                    android:layout_width="0dp"
+                    android:layout_height="20dp"
                     android:layout_weight="1"/>
 
 
             </LinearLayout>
         </LinearLayout>
+
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -201,6 +245,6 @@
 
 
     </LinearLayout>
-
+    </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
