--- a/app/src/main/res/layout/activity_movie_info.xml
+++ b/app/src/main/res/layout/activity_movie_info.xml
@@ -1,62 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:id="@+id/main"
+        android:layout_height="200dp"/>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="310dp">
-                <ImageView
-                    android:id="@+id/backdrop"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:visibility="gone"
-                    app:srcCompat="@drawable/ic_launcher_background"/>
-                <ProgressBar
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:visibility="visible"
-                    android:id="@+id/progressBar"
-                    />
 
-                <ImageView
-                    android:id="@+id/poster"
-                    android:visibility="gone"
-                    android:layout_width="110dp"
-                    android:layout_height="160dp"
-                    android:layout_gravity="bottom|left"
-                    app:srcCompat="@drawable/ic_launcher_foreground"
-                    android:layout_marginLeft="20dp" />
 
-                <!--<TextView-->
-                    <!--android:id="@+id/movie_title"-->
-                    <!--android:layout_marginTop="100dp"-->
-                    <!--android:layout_marginLeft="60dp"-->
-                    <!--android:layout_width="180dp"-->
-                    <!--android:layout_height="50dp"-->
+                <!--<android.support.v4.view.ViewPager-->
+                    <!--android:id="@+id/youtube_fragment"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="200dp">-->
+
+                <!--</android.support.v4.view.ViewPager>-->
+
+                <!--<ProgressBar-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
                     <!--android:layout_gravity="center"-->
-                    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"-->
-                    <!--android:textStyle="bold"-->
-                    <!--android:textColor="@color/textColor"/>-->
-                <!--<TextView-->
-                    <!--android:id="@+id/movie_rating"-->
-                    <!--android:layout_marginTop="135dp"-->
-                    <!--android:layout_marginLeft="20dp"-->
-                    <!--android:layout_width="100dp"-->
-                    <!--android:layout_height="30dp"-->
-                    <!--android:layout_gravity="center"-->
-                    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"-->
-                    <!--android:textStyle="bold"-->
-                    <!--android:textColor="@color/textColor"/>-->
+                    <!--android:visibility="visible"-->
+                    <!--android:id="@+id/progressBar"-->
+                    <!--/>-->
 
-            </FrameLayout>
+
+            <!--</FrameLayout>-->
 
 
 
@@ -142,58 +128,6 @@
             android:orientation="vertical"
             android:layout_margin="2dp">
 
-            <LinearLayout
-
-                android:id="@+id/budgetLL"
-                android:visibility="gone"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_margin="2dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="23dp"
-                    android:layout_margin="2dp"
-                    android:text="Budget :"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/textColor"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:id="@+id/movie_info_budget"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:layout_margin="2dp"
-                    />
-
-            </LinearLayout>
-            <LinearLayout
-
-                android:id="@+id/revenueLL"
-                android:visibility="gone"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_margin="2dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="23dp"
-                    android:layout_margin="2dp"
-                    android:text="Revenue :"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/textColor"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:id="@+id/movie_info_revenue"
-                    android:layout_width="wrap_content"
-                    android:textStyle="bold"
-                    android:layout_height="40dp"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:layout_margin="2dp"
-                    />
-
-            </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
@@ -342,5 +276,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
-</android.support.v4.widget.NestedScrollView>
+    </android.support.v4.widget.NestedScrollView>
+</LinearLayout>
