--- a/app/src/main/res/layout/cast_gallery_layout.xml
+++ b/app/src/main/res/layout/cast_gallery_layout.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="120dp"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:cardView="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    >
+
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:foregroundGravity="center_horizontal|center_vertical"
@@ -19,7 +19,7 @@
 
         <ImageView
             android:layout_gravity="center_horizontal|center_vertical"
-            android:id="@+id/contentImageView"
+            android:id="@+id/backdrop"
             android:layout_width="114dp"
             android:layout_height="160dp"
             android:scaleType="fitXY"
@@ -28,20 +28,5 @@
 
     </android.support.v7.widget.CardView>
 
-    <TextView
-        android:id="@+id/contentTextView"
-        android:layout_width="88dp"
-        android:layout_height="50dp"
-        android:layout_alignLeft="@+id/cardView"
-        android:layout_below="@+id/cardView"
-        android:layout_marginLeft="2dp"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:shadowColor="@color/textShadow"
-        android:shadowRadius="2"
-        android:textAlignment="center"
-        android:textColor="@color/textColor"
-        android:textStyle="bold"
-        />
 
-</RelativeLayout>
+</LinearLayout>
