--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
-    android:visibility="gone"
-    android:id="@+id/mainView"
 android:layout_height="match_parent"
 android:background="@color/colorAccent">
 
 <LinearLayout
+    android:id="@+id/mainView"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="wrap_content">
